# test-vr

./: .gitignore  hellovr_notes.txt
core/: CMakeLists.txt  build.sh
core/sample_worlds/simple_case/: world.yaml
core/sample_worlds/simple_case/scripts/: id_hello-world
core/src/: core.cpp  core.hpp  scripting.cpp  scripting.hpp  types.hpp
core/test/: main.cpp  test.hpp  test_core.cpp  test_scripting.cpp  test_types.cpp
desktop/: .gitignore  CMakeLists.txt
desktop/src/: application.cpp  application.hpp  main.cpp  rendering.cpp  rendering.hpp
desktop/test/: test.hpp
